# net29

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  client.cpp  cppcon-2024.cpp  demo_algorithm.hpp  demo_error.hpp  demo_scope.hpp  demo_task.hpp  empty.cpp  http-server.cpp  server.cpp  set_next.cpp  task.cpp  time-server.cpp
examples/data/: index.html
include/beman/net29/: demo_algorithm.hpp  demo_error.hpp  demo_scope.hpp  demo_task.hpp  net.hpp
include/beman/net29/detail/: basic_socket.hpp  basic_socket_acceptor.hpp  basic_stream_socket.hpp  buffer.hpp  container.hpp  context_base.hpp  endpoint.hpp  execution.hpp  internet.hpp  io_base.hpp  io_context.hpp  io_context_scheduler.hpp  netfwd.hpp  operations.hpp  poll_context.hpp  sender.hpp  socket_base.hpp  socket_category.hpp  sorted_list.hpp  stop_token.hpp  timer.hpp
src/beman/: CMakeLists.txt
src/beman/net29/: CMakeLists.txt  net29.cpp
src/beman/net29/tests/: CMakeLists.txt  dummy.pass.cpp  sorted_list.pass.cpp
